--- a/ejercicioadmin.html
+++ b/ejercicioadmin.html
@@ -315,20 +315,11 @@
 
       <div class="card">
         <div class="metaRow">
-          <span class="pill pill-yellow" id="pillLevel">Nivel</span>
-          <span class="pill pill-blue" id="pillType">Tipo</span>
-          <span class="pill" id="pillSlug">slug</span>
-          <span class="pill" id="pillCount">Ejercicios: 0</span
-          ><span class="pill pill-yellow">ADMIN</span>
-          <span
-            class="pill"
-            id="pillProgress"
-            style="
-              background: rgba(252, 209, 22, 0.16);
-              border-color: rgba(252, 209, 22, 0.35);
-            "
-            >Progreso: 0%</span
-          >
+          <span id="pillLevel">Nivel</span>
+          <span id="pillType">Tipo</span>
+          <span id="pillSlug">slug</span>
+          <span id="pillCount">Ejercicios: 0</span><span>ADMIN</span>
+          <span id="pillProgress">Progreso: 0%</span>
         </div>
         <div class="progressWrap" style="margin-top: 10px">
           <div class="progressBar">
@@ -677,7 +668,7 @@
           <button class="btn btn-yellow" id="btnCheckPreview" type="button">
             ✅ Sprawdź
           </button>
-          <span id="previewResult" class="pill" style="display: none"></span>
+          <span id="previewResult" style="display: none"></span>
         </div>
 
         <div class="smallNote" style="margin-top: 10px; opacity: 0.95">
