--- a/espanel.html
+++ b/espanel.html
@@ -36,7 +36,7 @@
                 class="metaRow"
                 style="margin-top: 14px; flex-wrap: wrap; gap: 10px"
               >
-                <span class="pill"
+                <span
                   >👤 <b id="userEmail">...</b>
                   <span id="adminBadge" style="margin-left: 10px"
                     >(admin: —)</span
@@ -44,9 +44,9 @@
                 >
 
                 <!-- ✅ Access status pills (Krok 11) -->
-                <span id="accessPill" class="pill" style="display: none"></span>
-                <span id="planPill" class="pill" style="display: none"></span>
-                <span id="untilPill" class="pill" style="display: none"></span>
+                <span id="accessPill" style="display: none"></span>
+                <span id="planPill" style="display: none"></span>
+                <span id="untilPill" style="display: none"></span>
 
                 <span
                   id="adminLinkWrap"
@@ -140,10 +140,8 @@
                 class="metaRow"
                 style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
               >
-                <span class="pill" id="refStatInvites">👥 Recomendaciones: 0</span>
-                <span class="pill pill-yellow" id="refStatRewards"
-                  >🎫 Recompensas: 0</span
-                >
+                <span id="refStatInvites">👥 Recomendaciones: 0</span>
+                <span id="refStatRewards">🎫 Recompensas: 0</span>
               </div>
               <div id="refRewardsList" class="muted" style="margin-top: 10px"></div>
               <div
