--- a/lessonpage.html
+++ b/lessonpage.html
@@ -28,13 +28,12 @@
               <p class="subtitle" id="lessonDesc">Cargando…</p>
 
               <div class="metaRow">
-                <span class="pill pill-yellow" id="pillLevel">Nivel: —</span>
-                <span class="pill" id="pillTopic">Tema: —</span>
-                <span class="pill" id="pillType" style="display: none"></span>
-                <span class="pill" id="pillDuration" style="display: none"></span>
-                <span class="pill" id="pillPub" style="display: none"></span>
+                <span id="pillLevel">Nivel: —</span>
+                <span id="pillTopic">Tema: —</span>
+                <span id="pillType" style="display: none"></span>
+                <span id="pillDuration" style="display: none"></span>
+                <span id="pillPub" style="display: none"></span>
                 <a
-                  class="pill"
                   id="pillAdminLink"
                   href="#"
                   style="display: none; text-decoration: none"
@@ -66,8 +65,12 @@
           <div id="tocList" class="card" style="padding: 12px; margin: 0"></div>
         </div>
 
-        <div id="lessonContent" class="card lessonSurface lessonHtml" style="display: none"></div>
-        <div id="lessonSticky" class="lessonSticky" style="display:none;"></div>
+        <div
+          id="lessonContent"
+          class="card lessonSurface lessonHtml"
+          style="display: none"
+        ></div>
+        <div id="lessonSticky" class="lessonSticky" style="display: none"></div>
         <div id="lessonEmpty" class="empty" style="display: none"></div>
 
         <div class="hintSmall" id="studentHint" style="display: none"></div>
