--- a/course.html
+++ b/course.html
@@ -28,7 +28,7 @@
               <p class="subtitle levelSubtitle" id="levelSubtitle">Nivel</p>
 
               <div class="levelButtons">
-                <a class="btn-white-outline" href="espanel.html">🏠 Panel</a>
+                <a class="btn-white-outline" href="espanel.html">🏠 Libreta</a>
                 <a class="btn-white-outline" href="course.html?level=A1">A1</a>
                 <a class="btn-white-outline" href="course.html?level=A2">A2</a>
                 <a class="btn-white-outline" href="course.html?level=B1">B1</a>
