--- a/ejercicio.html
+++ b/ejercicio.html
@@ -1,109 +1,182 @@
 <!doctype html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <title>Ejercicios | AquiVivo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ejercicios | AquiVivo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <script src="assets/js/layout.js" type="module"></script>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="assets/js/layout.js" type="module"></script>
+  </head>
 
-<body data-page="ejercicio">
-  <div id="appHeader"></div>
+  <body data-page="ejercicio">
+    <div id="appHeader"></div>
 
-  <main class="page">
-    <div class="container">
+    <main class="page">
+      <div class="container">
+        <section class="heroBanner" style="padding: 22px 18px">
+          <div class="heroTitleRow">
+            <div class="heroIcon">🧩</div>
+            <div style="flex: 1">
+              <h1
+                class="glow-text"
+                style="
+                  margin: 0;
+                  font-family: 'Playfair Display', serif;
+                  font-weight: 900;
+                "
+              >
+                Ejercicios
+              </h1>
+              <p class="subtitle" id="topicDesc" style="margin: 8px 0 0">
+                Cargando…
+              </p>
 
-      <section class="heroBanner" style="padding:22px 18px;">
-        <div class="heroTitleRow">
-          <div class="heroIcon">🧩</div>
-          <div style="flex:1">
-            <h1 class="glow-text" style="margin:0; font-family:'Playfair Display',serif; font-weight:900;">Ejercicios</h1>
-            <p class="subtitle" id="topicDesc" style="margin:8px 0 0;">Cargando…</p>
+              <div class="metaRow" style="margin-top: 10px">
+                <span id="pillLevel">Nivel: —</span>
+                <span id="pillType" style="display: none"></span>
+                <span id="pillSlug" style="display: none"></span>
+                <span id="pillCount">0</span>
+                <span id="pillProgress">0%</span>
+                <a id="pillLessonLink" href="#" style="text-decoration: none"
+                  >📖 Lección</a
+                >
+              </div>
 
-            <div class="metaRow" style="margin-top:10px;">
-              <span class="pill pill-yellow" id="pillLevel">Nivel: —</span>
-              <span class="pill" id="pillType" style="display:none"></span>
-              <span class="pill" id="pillSlug" style="display:none"></span>
-              <span class="pill" id="pillCount">0</span>
-              <span class="pill pill-blue" id="pillProgress">0%</span>
-              <a class="pill" id="pillLessonLink" href="#" style="text-decoration:none;">📖 Lección</a>
-            </div>
-
-            <div class="readTools" id="readTools" style="margin-top:12px;">
-              <div class="readProgress">
-                <div class="readProgressBar">
-                  <div class="readProgressFill" id="readProgressFill" style="width:0%"></div>
+              <div class="readTools" id="readTools" style="margin-top: 12px">
+                <div class="readProgress">
+                  <div class="readProgressBar">
+                    <div
+                      class="readProgressFill"
+                      id="readProgressFill"
+                      style="width: 0%"
+                    ></div>
+                  </div>
+                  <div class="readProgressText" id="readProgressText">
+                    🧩 Progreso: 0%
+                  </div>
                 </div>
-                <div class="readProgressText" id="readProgressText">🧩 Progreso: 0%</div>
-              </div>
-              <div class="exerciseLinks" id="exerciseLinksWrap">
-                <a class="btn-white-outline" id="btnBackLesson" href="#">← Volver a la lección</a>
-                <a class="btn-white-outline" id="btnBackCourse" href="#">📚 Temas</a>
+                <div class="exerciseLinks" id="exerciseLinksWrap">
+                  <a class="btn-white-outline" id="btnBackLesson" href="#"
+                    >← Volver a la lección</a
+                  >
+                  <a class="btn-white-outline" id="btnBackCourse" href="#"
+                    >📚 Temas</a
+                  >
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="card" style="margin-top:14px; padding:14px 16px;">
-        <div style="display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between;">
-          <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center;">
-            <input id="searchInput" class="input" placeholder="Buscar…" style="min-width:220px;" />
-            <select id="filterType" class="select">
-              <option value="">Tipo: todos</option>
-              <option value="choice">Choice</option>
-              <option value="text">Text</option>
-              <option value="match">Match</option>
-              <option value="order">Order</option>
-            </select>
-            <select id="filterTag" class="select">
-              <option value="">Tag: todos</option>
-            </select>
-            <button id="btnClearFilters" class="btn-white-outline">🧹 Limpiar</button>
+        <section class="card" style="margin-top: 14px; padding: 14px 16px">
+          <div
+            style="
+              display: flex;
+              gap: 12px;
+              flex-wrap: wrap;
+              align-items: center;
+              justify-content: space-between;
+            "
+          >
+            <div
+              style="
+                display: flex;
+                gap: 10px;
+                flex-wrap: wrap;
+                align-items: center;
+              "
+            >
+              <input
+                id="searchInput"
+                class="input"
+                placeholder="Buscar…"
+                style="min-width: 220px"
+              />
+              <select id="filterType" class="select">
+                <option value="">Tipo: todos</option>
+                <option value="choice">Choice</option>
+                <option value="text">Text</option>
+                <option value="match">Match</option>
+                <option value="order">Order</option>
+              </select>
+              <select id="filterTag" class="select">
+                <option value="">Tag: todos</option>
+              </select>
+              <button id="btnClearFilters" class="btn-white-outline">
+                🧹 Limpiar
+              </button>
+            </div>
+
+            <div
+              style="
+                display: flex;
+                gap: 10px;
+                flex-wrap: wrap;
+                align-items: center;
+              "
+            >
+              <span id="taskChips">—</span>
+              <span
+                ><span id="doneCount">0</span>/<span id="totalCount">0</span>
+                hecho</span
+              >
+            </div>
           </div>
+        </section>
 
-          <div style="display:flex; gap:10px; flex-wrap:wrap; align-items:center;">
-            <span class="pill" id="taskChips">—</span>
-            <span class="pill pill-blue"><span id="doneCount">0</span>/<span id="totalCount">0</span> hecho</span>
+        <section id="adminWrap" style="display: none; margin-top: 12px">
+          <!-- Admin UI injected by JS if needed -->
+        </section>
+
+        <section style="margin-top: 14px">
+          <div id="emptyExercises" class="empty" style="display: none">
+            No hay ejercicios todavía.
           </div>
+          <div id="exerciseList" class="exerciseList"></div>
+        </section>
+      </div>
+    </main>
+
+    <div id="toast" class="toast" style="display: none"></div>
+
+    <!-- Finish modal -->
+    <div id="finishModal" class="modalOverlay" style="display: none">
+      <div class="modalCard">
+        <div
+          style="
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
+          "
+        >
+          <div style="font-weight: 900; font-size: 18px">🎉 ¡Listo!</div>
+          <button class="toolBtn" id="btnCloseFinish" title="Cerrar">✕</button>
         </div>
-      </section>
-
-      <section id="adminWrap" style="display:none; margin-top:12px;">
-        <!-- Admin UI injected by JS if needed -->
-      </section>
-
-      <section style="margin-top:14px;">
-        <div id="emptyExercises" class="empty" style="display:none;">No hay ejercicios todavía.</div>
-        <div id="exerciseList" class="exerciseList"></div>
-      </section>
-
-    </div>
-  </main>
-
-  <div id="toast" class="toast" style="display:none;"></div>
-
-  <!-- Finish modal -->
-  <div id="finishModal" class="modalOverlay" style="display:none;">
-    <div class="modalCard">
-      <div style="display:flex; align-items:center; justify-content:space-between; gap:10px;">
-        <div style="font-weight:900; font-size:18px;">🎉 ¡Listo!</div>
-        <button class="toolBtn" id="btnCloseFinish" title="Cerrar">✕</button>
-      </div>
-      <div class="muted" style="margin-top:8px;" id="finishText">Has completado los ejercicios.</div>
-      <div style="margin-top:14px; display:flex; gap:10px; flex-wrap:wrap;">
-        <a class="btn-yellow" id="btnFinishLesson" href="#">📖 Volver a la lección</a>
-        <a class="btn-white-outline" id="btnFinishCourse" href="#">📚 Ver temas</a>
-        <a class="btn" id="btnFinishPanel" href="espanel.html">🏠 Panel</a>
+        <div class="muted" style="margin-top: 8px" id="finishText">
+          Has completado los ejercicios.
+        </div>
+        <div
+          style="margin-top: 14px; display: flex; gap: 10px; flex-wrap: wrap"
+        >
+          <a class="btn-yellow" id="btnFinishLesson" href="#"
+            >📖 Volver a la lección</a
+          >
+          <a class="btn-white-outline" id="btnFinishCourse" href="#"
+            >📚 Ver temas</a
+          >
+          <a class="btn" id="btnFinishPanel" href="espanel.html">🏠 Libreta</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script type="module" src="assets/js/pages/ejercicio-page.js"></script>
-</body>
+    <script type="module" src="assets/js/pages/ejercicio-page.js"></script>
+  </body>
 </html>
