--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div style="margin-top:16px; display:flex; gap:12px; flex-wrap:wrap;">
               <a class="btn-yellow" href="login.html">Reserva tu Clase Gratis</a>
               <a class="btn-white-outline" id="btnCursos" href="#cursos">Ver Servicios</a>
-              <a class="btn" href="espanel.html">Ir al Panel</a>
+              <a class="btn" href="espanel.html">Libreta</a>
             </div>
 
           </div>
