--- a/lesson.html
+++ b/lesson.html
@@ -1,30 +1,31 @@
 <!doctype html>
 <html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Lección | AquiVivo</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <script src="assets/js/layout.js" type="module"></script>
-</head>
-<body data-page="lesson">
-  <div id="appHeader"></div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Lección | AquiVivo</title>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="assets/js/layout.js" type="module"></script>
+  </head>
+  <body data-page="lesson">
+    <div id="appHeader"></div>
 
-  <main class="page">
-    <div class="container">
-      <section class="card">
-        <h1 class="sectionTitle" style="margin-top:0;">Lección</h1>
-        <div class="subtitle">
-          Esta ruta es antigua. Usa <b>lessonpage.html</b> para ver la lección y <b>lessonadmin.html</b> para editarla.
-        </div>
-        <div class="metaRow" style="margin-top:14px;">
-          <a class="btn-yellow" href="espanel.html">Ir al panel</a>
-          <a class="btn" href="course.html?level=A1">Ir al curso</a>
-        </div>
-      </section>
-    </div>
-  </main>
+    <main class="page">
+      <div class="container">
+        <section class="card">
+          <h1 class="sectionTitle" style="margin-top: 0">Lección</h1>
+          <div class="subtitle">
+            Esta ruta es antigua. Usa <b>lessonpage.html</b> para ver la lección
+            y <b>lessonadmin.html</b> para editarla.
+          </div>
+          <div class="metaRow" style="margin-top: 14px">
+            <a class="btn-yellow" href="espanel.html">Libreta</a>
+            <a class="btn" href="course.html?level=A1">Ir al curso</a>
+          </div>
+        </section>
+      </div>
+    </main>
 
-  <!-- no page script on purpose -->
-</body>
+    <!-- no page script on purpose -->
+  </body>
 </html>
