--- a/index.html
+++ b/index.html
@@ -53,21 +53,6 @@
                 </div>
               </div>
 
-              <div style="margin-top:12px; display:grid; grid-template-columns:repeat(3,1fr); gap:10px;">
-                <div class="card statCard" style="padding:14px; text-align:center;">
-                  <div style="font-weight:900; font-size:34px; color:var(--yellow);">100+</div>
-                  <div class="muted">Estudiantes</div>
-                </div>
-                <div class="card statCard" style="padding:14px; text-align:center;">
-                  <div style="font-weight:900; font-size:34px; color:var(--pastel-blue);">10</div>
-                  <div class="muted">años</div>
-                </div>
-                <div class="card statCard" style="padding:14px; text-align:center;">
-                  <div style="font-weight:900; font-size:34px; color:var(--red);">4.9★</div>
-                  <div class="muted">valoración</div>
-                </div>
-              </div>
-
             </div>
           </div>
         </div>
@@ -75,40 +60,220 @@
 
     </div><!-- /container -->
 
-    <!-- 3 KAFELKI: FULL WIDTH -->
     <section class="section-wide">
       <div class="section-wide-inner">
-        <div class="features-grid">
-          <div class="card featureCard featureCard--yellow" style="padding:22px;">
-            <div style="font-weight:900; font-size:22px;">🗣 Conversación Natural</div>
-            <div class="muted" style="margin-top:10px; font-size:18px; line-height:1.55;">Habla como un nativo desde el primer día.</div>
+        <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:10px;">
+          <div class="card statCard" style="padding:14px; text-align:center;">
+            <div style="font-weight:900; font-size:34px; color:var(--yellow);">100+</div>
+            <div class="muted">Estudiantes</div>
           </div>
-
-          <div class="card featureCard featureCard--blue" style="padding:22px;">
-            <div style="font-weight:900; font-size:22px;">📚 Material Exclusivo</div>
-            <div class="muted" style="margin-top:10px; font-size:18px; line-height:1.55;">Recursos creados para hispanohablantes.</div>
+          <div class="card statCard" style="padding:14px; text-align:center;">
+            <div style="font-weight:900; font-size:34px; color:var(--pastel-blue);">10</div>
+            <div class="muted">años</div>
           </div>
-
-          <div class="card featureCard featureCard--red" style="padding:22px;">
-            <div style="font-weight:900; font-size:22px;">⚡ Resultados Rápidos</div>
-            <div class="muted" style="margin-top:10px; font-size:18px; line-height:1.55;">Progreso visible semana tras semana.</div>
+          <div class="card statCard" style="padding:14px; text-align:center;">
+            <div style="font-weight:900; font-size:34px; color:var(--red);">4.9★</div>
+            <div class="muted">valoración</div>
           </div>
         </div>
       </div>
     </section>
 
-    <div class="container">
+        <!-- WHY SECTION -->
+    <section class="section-wide why-section">
+      <div class="section-wide-inner">
+        <div class="why-grid">
+          <div class="why-text">
+            <h2>&iquest;Por qu&eacute; aprender <span class="accent-yellow">conmigo?</span></h2>
+            <p>
+              Desde muy peque&ntilde;a el espa&ntilde;ol estuvo cerca de mi coraz&oacute;n &mdash; y, especialmente, su
+              versi&oacute;n latinoamericana, llena de emoci&oacute;n, calidez y vida. Fue este espa&ntilde;ol el
+              que me hizo enamorarme de los idiomas. Hoy me especializo en espa&ntilde;ol latinoamericano, tal
+              como se habla de verdad &mdash; entre personas, en las relaciones, en la vida cotidiana.
+            </p>
 
-      <!-- CURSOS -->
-    <div id="cursos" class="card" style="margin-top:18px;">
-        <div class="sectionTitle" style="margin-top:0;">📌 Empieza ahora</div>
-        <div class="hintSmall">Entra al <b>Panel</b> para activar tu acceso (código o plan) y abrir tu nivel.</div>
+            <div class="why-join">
+              <div class="why-avatars" aria-hidden="true">
+                <span class="avatar avatar-yellow">&#x1F469;</span>
+                <span class="avatar avatar-red">&#x1F468;</span>
+                <span class="avatar avatar-white">&#x1F9D1;</span>
+              </div>
+              <div class="why-join-text">
+                &Uacute;nete a <span class="accent-yellow">100+ estudiantes</span> que ya dominan el polaco
+              </div>
+            </div>
+          </div>
+
+          <div class="why-cards">
+            <div class="card featureCard featureCard--yellow why-card">
+              <div class="why-card-icon">&#x1F5E3;</div>
+              <div class="why-card-title">Conversaci&oacute;n Natural</div>
+              <div class="why-card-text">Aprende a hablar como un nativo desde el primer d&iacute;a.</div>
+            </div>
+
+            <div class="card featureCard featureCard--red why-card">
+              <div class="why-card-icon">&#x26A1;</div>
+              <div class="why-card-title">Resultados R&aacute;pidos</div>
+              <div class="why-card-text">Ve tu progreso semana tras semana.</div>
+            </div>
+
+            <div class="card featureCard featureCard--blue why-card">
+              <div class="why-card-icon">&#x1F4DA;</div>
+              <div class="why-card-title">Material Exclusivo</div>
+              <div class="why-card-text">E-books y recursos creados por m&iacute; para ti.</div>
+            </div>
+
+            <div class="card featureCard featureCard--navy why-card">
+              <div class="why-card-icon">&#x1F91D;</div>
+              <div class="why-card-title">Apoyo Total</div>
+              <div class="why-card-text">Estoy aqu&iacute; para ayudarte en cada paso.</div>
+            </div>
+          </div>
+        </div>
+
       </div>
+    </section>
 
-    </div><!-- /container -->
-  
+    <!-- METHOD SECTION -->
+    <section class="section-wide method-section">
+      <div class="section-wide-inner">
+        <h2 class="method-title">M&eacute;todo Dise&ntilde;ado para Ti</h2>
 
-<section id="contact" class="contactSection">
+        <div class="method-grid">
+          <article class="method-card method-card--yellow">
+            <div class="method-badge">Precio de Lanzamiento</div>
+            <div class="method-level">🧩 NIVEL A1-A2</div>
+            <h3>Fundamentos de la vida en Polonia</h3>
+            <p class="method-lead">Ideal para empezar tu vida en Polonia PL</p>
+            <ul class="method-list">
+              <li><span class="check">✓</span>Pronunciaci&oacute;n polaca para hispanohablantes</li>
+              <li><span class="check">✓</span>Vocabulario esencial para la vida diaria</li>
+              <li><span class="check">✓</span>Situaciones reales: trabajo, tienda, m&eacute;dico, transporte</li>
+              <li><span class="check">✓</span>Gram&aacute;tica b&aacute;sica explicada paso a paso</li>
+              <li><span class="check">✓</span>Audios y pr&aacute;ctica de conversaci&oacute;n desde el primer d&iacute;a</li>
+            </ul>
+          </article>
+
+          <article class="method-card method-card--white">
+            <div class="method-badge method-badge--red">Oferta Especial</div>
+            <div class="method-level">🚀 NIVEL B1</div>
+            <h3>Vida independiente en Polonia</h3>
+            <p class="method-sub">Para trabajar, comunicarte y vivir con confianza</p>
+            <ul class="method-list">
+              <li><span class="check">✓</span>Conversaci&oacute;n fluida en situaciones cotidianas y profesionales</li>
+              <li><span class="check">✓</span>Polaco para el trabajo, oficina y vida social</li>
+              <li><span class="check">✓</span>Expresar opiniones, experiencias y emociones</li>
+              <li><span class="check">✓</span>Vocabulario avanzado y estructuras naturales</li>
+              <li><span class="check">✓</span>Preparaci&oacute;n pr&aacute;ctica para ex&aacute;menes y entrevistas</li>
+            </ul>
+          </article>
+
+          <article class="method-card method-card--red">
+            <div class="method-badge method-badge--white">Precio Promocional</div>
+            <div class="method-level">👑 NIVEL B2</div>
+            <h3>Integraci&oacute;n total</h3>
+            <p class="method-sub">Para integrarte completamente y avanzar profesionalmente</p>
+            <ul class="method-list">
+              <li><span class="check">✓</span>Perfeccionamiento de la comunicaci&oacute;n oral y escrita</li>
+              <li><span class="check">✓</span>Polaco profesional y acad&eacute;mico especializado</li>
+              <li><span class="check">✓</span>Expresiones idiom&aacute;ticas y lenguaje natural</li>
+              <li><span class="check">✓</span>Debates, negociaciones y situaciones formales</li>
+              <li><span class="check">✓</span>Preparaci&oacute;n para ciudadan&iacute;a, ex&aacute;menes oficiales y trabajo avanzado</li>
+            </ul>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- SERVICES PLUS -->
+    <section class="section-wide services-plus">
+      <div class="section-wide-inner">
+        <div class="services-plus-head">
+          <h2>M&aacute;s que Clases de Idioma</h2>
+          <p>
+            Te acompa&ntilde;o en todo tu proceso de adaptaci&oacute;n a Polonia con servicios
+            dise&ntilde;ados para facilitar tu vida.
+          </p>
+        </div>
+
+        <div class="services-plus-grid">
+          <article class="services-plus-card sp-yellow">
+            <div class="sp-icon">📋</div>
+            <h3>Ayuda con Tr&aacute;mites</h3>
+            <p>Acompa&ntilde;amiento en oficinas, traducci&oacute;n de documentos oficiales.</p>
+            <div class="sp-price">Desde 100 PLN</div>
+            <button class="sp-btn sp-btn-red" type="button">Saber M&aacute;s</button>
+          </article>
+
+          <article class="services-plus-card sp-red">
+            <div class="sp-icon">📝</div>
+            <h3>Traducciones</h3>
+            <p>Traducciones espa&ntilde;ol-polaco de documentos, contratos, certificados.</p>
+            <div class="sp-pill">Desde 50 PLN/p&aacute;g</div>
+            <button class="sp-btn sp-btn-yellow" type="button">Saber M&aacute;s</button>
+          </article>
+
+          <article class="services-plus-card sp-white">
+            <div class="sp-icon">👥</div>
+            <h3>Clases Grupales</h3>
+            <p>Grupos peque&ntilde;os de m&aacute;ximo 5 personas. Aprende con otros latinos.</p>
+            <div class="sp-pill">80 PLN/persona</div>
+            <button class="sp-btn sp-btn-red" type="button">Saber M&aacute;s</button>
+          </article>
+
+          <article class="services-plus-card sp-blue">
+            <div class="sp-icon">💼</div>
+            <h3>Polaco Empresarial</h3>
+            <p>Clases para empresas con empleados hispanohablantes.</p>
+            <div class="sp-actions">
+              <div class="sp-pill">A consultar</div>
+              <button class="sp-btn sp-btn-yellow" type="button">Saber M&aacute;s</button>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- EBOOKS -->
+    <section class="section-wide ebooks-section">
+      <div class="section-wide-inner">
+        <div class="ebooks-head">
+          <h2>Mis E-books</h2>
+          <p>
+            Material exclusivo creado para hispanohablantes. Aprende a tu ritmo con
+            gu&iacute;as pr&aacute;cticas y ejercicios.
+          </p>
+        </div>
+
+        <div class="ebooks-grid">
+          <article class="ebook-card ebook-yellow">
+            <div class="ebook-icon">📘</div>
+            <h3>Polaco B&aacute;sico<br>para Latinos</h3>
+            <p>100 p&aacute;ginas con vocabulario esencial, ejercicios y audios.</p>
+            <div class="ebook-price">49 PLN</div>
+            <button class="ebook-btn ebook-btn-red" type="button">Ver Contenido</button>
+          </article>
+
+          <article class="ebook-card ebook-white">
+            <div class="ebook-icon ebook-icon-red">💬</div>
+            <h3>Frases<br>del D&iacute;a a D&iacute;a</h3>
+            <p>500 Frases Esenciales. Las frases m&aacute;s &uacute;tiles para tu vida diaria.</p>
+            <div class="ebook-price ebook-price-pill">39 PLN</div>
+            <button class="ebook-btn ebook-btn-red" type="button">Ver Contenido</button>
+          </article>
+
+          <article class="ebook-card ebook-red">
+            <div class="ebook-icon ebook-icon-white">📄</div>
+            <h3>Gu&iacute;a de<br>Tr&aacute;mites</h3>
+            <p>Gu&iacute;a de Tr&aacute;mites en Polonia. Todo sobre documentos y oficinas.</p>
+            <div class="ebook-price ebook-price-pill">59 PLN</div>
+            <button class="ebook-btn ebook-btn-yellow" type="button">Ver Contenido</button>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="contactSection">
       <div class="container">
         <div class="contactHead">
           <h2>¿Listo para Empezar tu Aventura?</h2>
@@ -213,3 +378,4 @@
 </main>
 </body>
 </html>
+
