--- a/espanel.html
+++ b/espanel.html
@@ -169,17 +169,7 @@
           ></div>
         </div>
 
-        <div class="referralRow" style="margin-top: 16px">
-
-              style="margin-top: 10px"
-            ></div>
-            <div
-              id="refRewardsActions"
-              class="muted"
-              style="margin-top: 10px"
-            ></div>
-          </div>
-        </div>
+        <div class="referralRow" style="margin-top: 16px"></div>
 
 
         <!-- Settings modal (placeholder for panel-page.js) -->
